--- a/manage-users/appsettings.Development.json
+++ b/manage-users/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AWS": {
+    "Cognito": {
+      "UserPoolId": "us-east-1_D8ojLT0uG",
+      "Region": "us-east-1"
+    }
+  },
+  "AllowedHosts": "*"
 }
